--- a/SMV/index.html
+++ b/SMV/index.html
@@ -20,7 +20,7 @@
     <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-        <li class="sidebar-brand"><a href="http://startbootstrap.com">Start Bootstrap</a></li>
+        <li class="sidebar-brand"><a href="http://startbootstrap.com">Auswahl</a></li>
         <li><a href="#Startseite">Startseite</a></li>
         <li><a href="#Mitarbeiter">Mitarbeiter</a></li>
       </ul>
@@ -41,8 +41,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
-            <h2>Subtle Sidebar is the Perfect Template for your Next Portfolio Website Project!</h2>
-            <p class="lead">This template really has it all. It's up to you to customize it to your liking! It features some fresh photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+            <h2>Die SMV des FEG-Stuttgart</h2>
+            <p class="lead">Hier könnte eine Beschreibung der SMV-Tätigkeiten stehen.</p>
           </div>
         </div>
       </div>
@@ -54,7 +54,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-4 text-center">
-            <h2>Our Services</h2>
+            <h2>Diverse Links</h2>
             <hr>
           </div>
         </div>
@@ -95,7 +95,7 @@
     <!-- Callout -->
     <div class="callout">
       <div class="vert-text">
-        <h1 class="orange">A Dramatic Text Area</h1>
+        <h1 class="orange">Ein Dramatisches Textfeld!</h1>
       </div>
     </div>
     <!-- /Callout -->
@@ -105,7 +105,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-4 text-center">
-            <h2>Our Work</h2>
+            <h2>Unsere Projekte und Aufgaben</h2>
             <hr>
           </div>
         </div>
@@ -146,7 +146,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
-            <h3>The buttons below are impossible to resist.</h3>
+            <h3>Diese Buttons solltest du eigentlich nicht sehen.</h3>
             <a href="#" class="btn btn-lg btn-default">Click Me!</a>
             <a href="#" class="btn btn-lg btn-primary">Look at Me!</a>
           </div>
@@ -172,7 +172,7 @@
               <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
             </div>
             <hr>
-            <p>Copyright &copy; Company 2013</p>
+            <p>Copyright &copy; FEG-Stuttgart 2014</p>
           </div>
         </div>
       </div>
