--- a/SMV/index.html
+++ b/SMV/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.11.2/css/blueimp-gallery.min.css" />
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css" />
     <link href="css/custom.css" rel="stylesheet">
+    <title>
+      FEG | Friedrich-Eugens-Gymnasium Stuttgart
+    </title>
   </head>
 
   <body>
