--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -1,4 +1,4 @@
-<html>
+<html ng-app>
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js">
         </script>
@@ -16,7 +16,7 @@
             ]);
         </script>
     </head>
-    <body>
+    <body ng-controller="AngularCtrl">
 <h3>
   Vermischtes
 </h3>
