--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -3,7 +3,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js">
         </script>
         <script>
-            function TodoCtrl($scope) {
+            function AngularCtrl($scope) {
                 $scope.img = [
                     {url:'http://www.feg-stuttgart.de/bilder/k12.jpg'}
                 ];
