--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -1,5 +1,6 @@
 <html ng-app>
     <head>
+        <meta charset="utf-8" />
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js">
         </script>
         <script>
