--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -14,7 +14,7 @@
 
             myApp.config([
                 '$interpolateProvider', function($interpolateProvider) {
-                    return $interpolateProvider.startSymbol('{(').endSymbol(')}');
+                    return $interpolateProvider.startSymbol('((((').endSymbol('))))');
                 }
             ]);
         </script>
@@ -45,7 +45,7 @@
     </div>
     <div class="col-lg-4">
       <a href="http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a3.jpg" title="Präsentation der neuen Trikots" data-gallery>
-        <img class="img-thumbnail gallery" src="{(img.url)}" alt='' id="Galerie-Vermischtes-3" />
+        <img class="img-thumbnail gallery" src="((((img.url))))" alt='' id="Galerie-Vermischtes-3" />
       </a>
       <p>
         Präsentation der neuen Trikots der Fußballmanschaft
