--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -25,57 +25,12 @@
 </h3>
 <div id="links">
   <div class="row">
-    <div class="col-lg-4">
+    <div class="col-lg-4" ng-repeat="img in images">
       <a href="http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a1.jpg" title="Wandertag auf dem Rotenberg" data-gallery>
-        <img class="img-thumbnail gallery" src="" alt='' id="Galerie-Vermischtes-1" />
+        <img class="img-thumbnail gallery" src="((((img.url))))" alt='' id="Galerie-Vermischtes-1" />
       </a>
       <p>
         Beim Wandertag an der Grabkapelle auf dem Rotenberg
-      </p>
-      <br/>
-    </div>
-    <div class="col-lg-4">
-      <a href="http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a2.jpg" title="Fußballmannschaft des FEG" data-gallery>
-        <img class="img-thumbnail gallery" src="" alt='' id="Galerie-Vermischtes-2" />
-      </a>
-      <p>
-        Fußballmannschaft des FEG für "Jugend trainiert für Olympia"
-      </p>
-      <br/>
-    </div>
-    <div class="col-lg-4">
-      <a href="http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a3.jpg" title="Präsentation der neuen Trikots" data-gallery>
-        <img class="img-thumbnail gallery" src="((((img.url))))" alt='' id="Galerie-Vermischtes-3" />
-      </a>
-      <p>
-        Präsentation der neuen Trikots der Fußballmanschaft
-      </p>
-      <br/>
-    </div>
-    <div class="col-lg-4">
-      <a href="http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a4.jpg" title="Hausaufgabenbetreuung" data-gallery>
-        <img class="img-thumbnail gallery" src="" alt='' id="Galerie-Vermischtes-4" />
-      </a>
-      <p>
-        Bei der Hausaufgabenbetreuung
-      </p>
-      <br/>
-    </div>
-    <div class="col-lg-4">
-      <a href="http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a5.jpg" title="Der Computerraum nach der Neuausstattung" data-gallery>
-        <img class="img-thumbnail gallery" src="" alt='' id="Galerie-Vermischtes-5" />
-      </a>
-      <p>
-        Der Computerraum nach der Neuausstattung
-      </p>
-      <br/>
-    </div>
-    <div class="col-lg-4">
-      <a href="http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a6.jpg" title="Künstlerische Ansicht des Schulgebäudes" data-gallery>
-        <img class="img-thumbnail gallery" src="" alt='' id="Galerie-Vermischtes-6" />
-      </a>
-      <p>
-        Künstlerische Ansicht des Schulgebäudes
       </p>
       <br/>
     </div>
