--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -5,7 +5,7 @@
         </script>
         <script>
             function AngularCtrl($scope) {
-                $scope.imgages = [
+                $scope.images = [
                     {url:'http://www.feg-stuttgart.de/bilder/k12.jpg'}
                 ];
             }
