--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -8,15 +8,9 @@
                 $scope.images = [
                     {url:'http://www.feg-stuttgart.de/bilder/k12.jpg'}
                 ];
-           var myapp;
-            myApp = angular.module('myApp', []);
-
-            myApp.config([
-                '$interpolateProvider', function($interpolateProvider) {
-                    return $interpolateProvider.startSymbol('{(').endSymbol(')}');
-                }
-            ]);
-            }
+           var app = angular.module('app', []).config(function ($interpolateProvider) {
+  $interpolateProvider.startSymbol('{[{').endSymbol('}]}');
+});
         </script>
     </head>
     <body ng-controller="AngularCtrl">
@@ -27,7 +21,7 @@
   <div class="row">
     <div class="col-lg-4" ng-repeat="img in images">
       <a href="http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a1.jpg" title="Wandertag auf dem Rotenberg" data-gallery>
-        <img class="img-thumbnail gallery" src="{{img.url}}" alt='' id="Galerie-Vermischtes-1" />
+        <img class="img-thumbnail gallery" src="{[{img.url}]}" alt='' id="Galerie-Vermischtes-1" />
       </a>
       <p>
         Beim Wandertag an der Grabkapelle auf dem Rotenberg
