--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="col-lg-4" ng-repeat="img in images">
       <a href="http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a1.jpg" title="Wandertag auf dem Rotenberg" data-gallery>
-        <img class="img-thumbnail gallery" src="{(img.url)}" alt='' id="Galerie-Vermischtes-1" />
+        <img class="img-thumbnail gallery" src="{{img.url}}" alt='' id="Galerie-Vermischtes-1" />
       </a>
       <p>
         Beim Wandertag an der Grabkapelle auf dem Rotenberg
