--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -11,7 +11,7 @@
                         {url:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/a3.jpg'},
                         {url:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/a4.jpg'},
                         {url:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/a5.jpg'},
-                        {url:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/a6.jpg'},
+                        {url:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/a6.jpg'}
                     ];
                 }
         </script>
