--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -27,7 +27,7 @@
         <img class="img-thumbnail gallery" src="{{img.src}}" alt='{{img.alt}}'/>
       </a>
       <p>
-        Beim Wandertag an der Grabkapelle auf dem Rotenberg
+        {{img.alt}}
       </p>
       <br/>
     </div>
