--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -6,7 +6,7 @@
         <script>
             function AngularCtrl($scope) {
                 $scope.images = [
-                        {link:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a1.jpg', src:'src="http://www.feg-stuttgart.de/bilder/galerie/vermischt/a1.jpg"', alt:'Beim Wandertag an der Grabkapelle auf dem Rotenberg'},
+                        {link:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a1.jpg', src:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/a1.jpg', alt:'Beim Wandertag an der Grabkapelle auf dem Rotenberg'},
                         {link:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a2.jpg', src:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/a2.jpg', alt:'Fußballmannschaft des FEG für "Jugend trainiert für Olympia'},
                         {link:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a3.jpg', src:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/a3.jpg', alt:'Präsentation der neuen Trikots'},
                         {link:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a4.jpg', src:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/a4.jpg', alt:'Hausaufgabenbetreuung'},
@@ -24,7 +24,7 @@
   <div class="row">
     <div class="col-lg-4" ng-repeat="img in images">
       <a href="{{img.link}}" title="{{img.alt}}" data-gallery>
-        <img class="img-thumbnail gallery" {{img.src}} alt='{{img.alt}}'/>
+        <img class="img-thumbnail gallery" src="{{img.src}}" alt='{{img.alt}}'/>
       </a>
       <p>
         {{img.alt}}
