--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -1,6 +1,24 @@
 <html ng-app>
   <head>
     <meta charset="utf-8" />
+  </head>
+<body ng-controller="AngularCtrl" ng-app="customInterpolationApp">
+<h3>
+  Vermischtes
+</h3>
+<div id="links">
+  <div class="row">
+    <div class="col-lg-4" ng-repeat="img in images">
+      <a href="{(img.link)}" title="{(img.alt)}" data-gallery>
+        <img class="img-thumbnail gallery" src="{(img.src)}" alt='{(img.alt)}'/>
+      </a>
+      <p>
+        {(img.alt)}
+      </p>
+      <br/>
+    </div>
+  </div>
+</div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js">
     </script>
     <script charset="utf-8">
@@ -24,21 +42,4 @@ function AngularCtrl($scope) {
         ];
       };
     </script>
-  </head>
-<body ng-controller="AngularCtrl" ng-app="customInterpolationApp">
-<h3>
-  Vermischtes
-</h3>
-<div id="links">
-  <div class="row">
-    <div class="col-lg-4" ng-repeat="img in images">
-      <a href="{(img.link)}" title="{(img.alt)}" data-gallery>
-        <img class="img-thumbnail gallery" src="{(img.src)}" alt='{(img.alt)}'/>
-      </a>
-      <p>
-        {(img.alt)}
-      </p>
-      <br/>
-    </div>
-  </div>
-</div>
+    </body>
