--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -2,18 +2,18 @@
   <head>
     <meta charset="utf-8" />
   </head>
-<body ng-controller="AngularCtrl" ng-app="customInterpolationApp">
+<body ng-controller="AngularCtrl">
 <h3>
   Vermischtes
 </h3>
 <div id="links">
   <div class="row">
     <div class="col-lg-4" ng-repeat="img in images">
-      <a href="{(img.link)}" title="{(img.alt)}" data-gallery>
-        <img class="img-thumbnail gallery" src="{(img.src)}" alt='{(img.alt)}'/>
+      <a href="{{img.link}}" title="{{img.alt}}" data-gallery>
+        <img class="img-thumbnail gallery" src="{{img.src}}" alt='{{img.alt}}'/>
       </a>
       <p>
-        {(img.alt)}
+        {{img.alt}}
       </p>
       <br/>
     </div>
