--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -1,8 +1,4 @@
-<html ng-app>
-  <head>
-    <meta charset="utf-8" />
-  </head>
-<body ng-controller="AngularCtrl">
+<body ng-controller="AngularCtrl" ng-app="customInterpolationApp">
 <h3>
   Vermischtes
 </h3>
@@ -34,5 +30,12 @@ function AngularCtrl($scope) {
           {link:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/high/a6.jpg', src:'http://www.feg-stuttgart.de/bilder/galerie/vermischt/a6.jpg', alt:'Künstlerische Ansicht des Schulgebäudes'}
         ];
       };
+          var customInterpolationApp = angular.module('customInterpolationApp', []);
+
+customInterpolationApp.config(function($interpolateProvider) {
+    $interpolateProvider.startSymbol('{(');
+    $interpolateProvider.endSymbol(')}');
+});
+
     </script>
     </body>
