--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -9,7 +9,7 @@
         <img class="img-thumbnail gallery" src="{{img.src}}" alt='{{img.alt}}'/>
       </a>
       <p>
-        {{img.alt}}
+        {(img.alt)}
       </p>
       <br/>
     </div>
