--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -12,7 +12,7 @@
         <img class="img-thumbnail gallery" src="{{img.src}}" alt='{{img.alt}}'/>
       </a>
       <p>
-        {(img.alt)}
+        {{img.alt}}
       </p>
       <br/>
     </div>
