--- a/text/Galerie/Vermischtes2.html
+++ b/text/Galerie/Vermischtes2.html
@@ -6,7 +6,7 @@
 </h3>
 <div id="links">
   <div class="row">
-  {% for img in site.data.images %}
+  {% for img in site.data.images-Galerie-Vermischtes %}
     <div class="col-lg-4" ng-repeat="img in images">
       <a href="{{img.link}}" title="{{img.alt}}" data-gallery>
         <img class="img-thumbnail gallery" src="{{img.src}}" alt='{{img.alt}}'/>
