--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>404</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/404.css" charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="http://static.feg-stuttgart.tk/css/404.css" charset="utf-8" />
   </head>
   <body>
     <div class="container">
